Alterando primeira seção

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
 					<!-- MENU -->
 					<div class="pull-right">
 						<nav class="navmenu center">
-							<ul>
-								<li class="scroll_btn last"><a href="inscricao.html" >Inscrições</a></li>
-							</ul>
+							<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
 						</nav>
 					</div><!-- //MENU -->
 				</div><!-- //MENU BLOCK -->
@@ -110,39 +108,32 @@
 		<section id="home" class="padbot0">
 				
 			<!-- TOP SLIDER -->
-			<div class="flexslider top_slider">
-				<div class="overlay">
-					<span></span>
-					<span></span>
-				</div>
+			<div class="flexslider top_slider">					
 				<div class="col-lg-6 col-md-12 col-xs-12">
 						<div class="contents">
-							<h2 class="head-title">CAPACITAÇÃO EM</h2>
-							<h2 class="head-title"><strong>EVENTOS DE INOVAÇÃO</strong></h2>
+							<h2 class="head-title"><strong>CAPACITAÇÃO EM</strong></h2>
+							<h2 class="head-title"><b>EVENTOS DE INOVAÇÃO</b></h2>
 							<p class="tagp">Aprenda na prática como revolucionar o ecossistema universitário de Governador Valadares - MG por meio de eventos relacionados às temáticas de empreendedorismo e inovação.</p>
 						</div>
 						<div class="row1">
-							<div class="col-sm-6 col-md-3">
+							<div class="col">
 								<div class="service-item">
 								<img src="images/icone1.png" alt="">
 								<p>IDEATHONS</p>
 								</div>
 							</div>
-							<div class="col-sm-6 col-md-3">
+							<div class="col">
 								<div class="service-item">
 									<img src="images/icone2.png" alt="">
 								<p>BOOTCAMPS</p>
 								</div>
 							</div>
-							<div class="col-sm-6 col-md-3">
+							<div class="col">
 								<div class="service-item">
 								<img src="images/icone3.png" alt="">
 								<p>HACKATHONS</p>
 								</div>
 							</div>
-						</div>
-						<div class="container1">
-							<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
 						</div>
 				</div>
 
@@ -151,19 +142,14 @@
 						<div class="imagem1">
 							<div class="service-item">
 							<img src="images/Imagem1.png" alt="">
-							<h3>Capacitação com bolsa de estudo</h3>
+							<ul>
+								<li class="closed">Capacitação com bolsa de estudo</li>
+								<li class="closed">Aulas on-line e presenciais</li>
+								<li class="closed">Realização de evento ao final</li>
+							</ul>
+							<div class="container1">
+								<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
 							</div>
-						</div>
-						<div class="imagem2">
-							<div class="service-item">
-							<img src="images/Imagem2.png" alt="">
-							<h3>Aulas on-line e presenciais</h3>
-							</div>
-						</div>
-						<div class="imagem3">
-							<div class="service-item">
-							<img src="images/Imagem3.png" alt="">
-							<h3>Realização de evento ao final </h3>
 							</div>
 						</div>
 					</div>
