Alterando página de motivos, o que, metodologia e chamada da inscrição

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						</div>
 				</div>
 
-				<div class="col-lg-6 col-md-12 col-xs-12 p-0">
+				<div class="col-lg-6x col-md-12 col-xs-12 p-0">
 					<div class="intro-img">
 						<div class="imagem1">
 							<div class="service-item">
@@ -174,29 +174,16 @@
 							<h2><b>GARANTIR SUA INSCRIÇÃO</b></h2>
 							<div class="imagens">
 								<div class="service-item">
-								<img src="images/Imagem4.png" alt="">
+								<div class="atraves_da_img">
 								<p>Comprovante de participação</p>
-								</div>
-							</div>
-							<div class="imagens">
-								<div class="service-item">
-								<img src="images/Imagem5.png" alt="">
 								<p>Ajuda de custo durante 4 meses</p>
-								</div>
-							</div>
-							<div class="imagens">
-								<div class="service-item">
-								<img src="images/Imagem6.png" alt="">
 								<p>Acesso a metodologias e ferramentas exclusivas</p>
-								</div>
-							</div>
-							<div class="imagens">
-								<div class="service-item">
-								<img src="images/Imagem6.png" alt="">
 								<p>Prática de um Evento de Inovação</p>
 								</div>
+								<img src="images/motivos.png" alt="">
+								</div>
 							</div>
-							<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
+							<a class="btn btn-active" href="inscricao.html" ><span>Inscreva-se</span></a>
 					</div><!-- //ROW -->
 				</div><!-- //CONTAINER -->
 			</div><!-- //MULTI PURPOSE -->
@@ -206,17 +193,29 @@
 				
 				<!-- CONTAINER -->
 				<div class="container">
+
+					<div class="col-lg-6 col-md-12 col-xs-12">
 					
 					<!-- ROW -->
 					<div class="row">
 							<h2>E O QUE</h2>
-							<h2><b>VAMOS APRENDER?</b></h2>
+							<h2><b><span style="color: #ff8701;">VAMOS APRENDER?</span></b></h2>
+							<div class="atraves_da_img_2">
 							<p>Planejar, organizar e executar eventos de inovação e empreendedorismo, como:</p>
-							<p><b>IDEATHONS, BOOTCAMPS e HACKATHONS</b></p>
+							<p class="centralizar_p"><span style="color: #FB133A;">IDEATHONS,</span> <span style="color: #00BAA7;">BOOTCAMPS</span> e <span style="color: #FF8701;">HACKATHONS</span></p>
 							<p>direcionados especialmente para o ambiente universitário e voltados para o desenvolvimento de ideias de negócio que utilizem conhecimento de base tecnológica.</p>
-							<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
+						    </div>
+							<img src="images/o_que_vamos_aprender.png" alt="">
 					</div><!-- //ROW -->
 				</div><!-- //CONTAINER -->
+				<div class="col-lg-6y col-md-12 col-xs-12 p-0">
+					<div class="service-item">
+						<img src="images/o_que_vamos_aprender2.png" alt="">
+						<div class="container1">
+							<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
+						</div>
+					</div>
+				</div>
 			</div><!-- //MULTI PURPOSE -->
 			
 			<!-- CLEAN CODE -->
@@ -225,34 +224,36 @@
 				<!-- CONTAINER -->
 				<div class="container" data-appear-top-offset="-200" data-animated="fadeInUp">
 					<div class="tab-pane fade in active1 clearfix" id="tab7">
-						<p class="title1"><b>NOSSA</b></p>
-						<p class="title1"><b>METODOLOGIA</b></p>
-						<span>Os conhecimentos adquiridos na participação de eventos de empreendedorismo e inovação são inúmeros e o planejamento e operacionalização de tais projetos proporcionam uma visão ainda mais ampla e completa de todo o processo.</span>
+						<h2><b>NOSSA</b></h2>
+						<h2>METODOLOGIA</h2>
+						<p>Os conhecimentos adquiridos na participação de eventos de empreendedorismo e inovação são inúmeros e o planejamento e operacionalização de tais projetos proporcionam uma visão ainda mais ampla e completa de todo o processo.</p>
 					</div>
 
-					<ul id="myTab" class="nav nav-tabs">
-						<li class="active"><a class="i1" href="#tab1" data-toggle="tab"><i></i><span>Planejamento</span></a></li>
-						<li><a class="i2" href="#tab2" data-toggle="tab" ><i></i><span>Ferramentas</span></a></li>
-						<li><a class="i3" href="#tab3" data-toggle="tab" ><i></i><span>Gestão</span></a></li>
-						<li><a class="i4"href="#tab4" data-toggle="tab" ><i></i><span>Execução</span></a></li>
-					</ul><!-- CASTOM TAB -->
+					<ul class="ul_metodologia">
+						<img src="images/i1.png" alt="">
+						<img src="images/i2.png" alt="">
+						<img src="images/i3.png" alt="">
+						<img src="images/i4.png" alt="">
+					</ul>
+					<ul class="ul_metodologia">
+						<a class="btn btn-active" href="#tab1" data-toggle="tab" style="background:#62186A;"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Planejamento</span></a>
+						<a class="btn btn-active" href="#tab2" data-toggle="tab" style="background:#FF8701"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Ferramentas</span></a>
+						<a class="btn btn-active" href="#tab3" data-toggle="tab" style="background:#FB133A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Gestão</span></a>
+						<a class="btn btn-active" href="#tab4" data-toggle="tab" style="background:#62186A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Execução</span></a>
+					</ul>
 					<!-- CASTOM TAB -->
 					<div id="myTabContent" class="tab-content">
 						<div class="tab-pane fade in active clearfix" id="tab1">
-							<p class="title"><b>Planejamento</b></p>
-							<span>Apresentar e detalhar como é o planejamento e realização de eventos, de maneira geral, focados em eventos de inovação, com conteúdos direcionados para execução de orçamento, comunicação e marketing, entre outros.</span>
+							<p>Apresentar e detalhar como é o planejamento e realização de eventos, de maneira geral, focados em eventos de inovação, com conteúdos direcionados para execução de orçamento, comunicação e marketing, entre outros.</p>
 						</div>
 						<div class="tab-pane fade clearfix" id="tab2">
-							<p class="title"><b>Ferramentas</b></p>
-							<span>Proporcionar a conexão entre a teoria e a prática, por meio de aulas que auxiliarão no entendimento e aplicação das metodologias de planejamento e ferramentas para execução de eventos de empreendedorismo e inovação.</span>
+							<p>Proporcionar a conexão entre a teoria e a prática, por meio de aulas que auxiliarão no entendimento e aplicação das metodologias de planejamento e ferramentas para execução de eventos de empreendedorismo e inovação.</p>
 						</div>
 						<div class="tab-pane fade clearfix" id="tab3">
-							<p class="title"><b>Gestão</b></p>
-							<span>Proporcionar o amadurecimento dos participantes nas metodologias, detalhar os tipos de gestão recomendada para cada tipo evento de empreendedorismo e inovação, bem como em quais contextos eles são recomendados.</span>
+							<p>Proporcionar o amadurecimento dos participantes nas metodologias, detalhar os tipos de gestão recomendada para cada tipo evento de empreendedorismo e inovação, bem como em quais contextos eles são recomendados.</p>
 						</div>
 						<div class="tab-pane fade clearfix" id="tab4">
-							<p class="title"><b>Execução</b></p>
-							<span>Definir a temática do evento de inovação a ser realizado pelos universitários na cidade ao final do programa, bem como a capacitação para sensibilização e prospecção do público, organização, execução, definição dos indicadores e análise dos resultados alcançados.</span>
+							<p>Definir a temática do evento de inovação a ser realizado pelos universitários na cidade ao final do programa, bem como a capacitação para sensibilização e prospecção do público, organização, execução, definição dos indicadores e análise dos resultados alcançados.</p>
 						</div>
 					</div>
 				</div><!-- //CONTAINER -->
@@ -371,7 +372,7 @@
 			<div class="purpose_block">
 				<div class="container1">
 					<div class="row1">
-						<h2><b><strong>E AÍ, BORA SE TORNAR</strong></b></h2>
+						<h2><b><strong style="color: #FB133A;">E AÍ, BORA SE TORNAR</strong></b></h2>
 						<h2><b>EXPERT EM EVENTOS DE INOVAÇÃO?</b></h2>
 					</div>
 					</div>
