Finalizando página inicial resolução PC

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	
 	<meta charset="utf-8">
-	<title>Campus Tech</title>
+	<title>Campus Tech - GV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -265,35 +265,22 @@
 		<section id="edital" class="padbot20">
 			<!-- CONTAINER -->
 			<div class="purpose_block">
-				<div class="container1">
-					<div class="row">
+						<div class="bloco1">
 						<h2><strong><b>CONHEÇA</b></strong></h2>
-						<h2><strong><b>O EDITAL!</b></strong></h2>
+						<h2><strong><b><span style="color: #ff8701;">O EDITAL!</span></b></strong></h2>
 						<p>Acesse o Edital do Programa Campus Tech e saiba mais sobre a capacitação em eventos de inovação.</p>
-						<h3><u><b>Quem pode se inscrever?</b></u></h3>
-						<div class="row3">
-							<div class="col-sm-6 col-md-3">
-								<div class="service-item">
-									<img src="images/requisitos-inscricao1.png" alt="">
-									<p>Estudantes de graduação e pós-graduação</p>
-								</div>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<div class="service-item">
-									<img src="images/requisitos-inscricao3.png" alt="">
-								    <p>Residentes da região de Governador Valadares-MG</p>
-								</div>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<div class="service-item">
-									<img src="images/requisitos-inscricao2.png" alt="">
-									<p>Que tenham interesse em eventos de inovação</p>
-								</div>
-							</div>
-						</div>
 						<a class="btn btn-active" href="https://drive.google.com/u/0/uc?id=1AXU0Yx1KaOLz4Igl1zKurwjVSY4886dI&export=download" ><span data-hover="Baixar">CONHEÇA O EDITAL</span></a>
-						<a class="btn btn-active" href="https://docs.google.com/spreadsheets/d/1ZijXaejT9taAsDHTVgNWx6OJzTIVVNKZ/copy" target="_blank"><span data-hover="Fazer Cópia">Questionário de Diligência</span></a>
-					</div>
+						</div>
+						<div class="bloco2">
+							<h3><span style="color: #FB133A;"><b>QUEM PODE SE INSCREVER?</b></span></h3>
+							<div class="atraves_da_imgz">
+								<p>Estudantes de graduação e pós-graduação</p>
+								<p>Residentes da região de Governador Valadares-MG</p>
+								<p>Que tenham interesse em eventos de inovação</p>
+							</div>
+							<img class = "imgz" src="images/icons_conheca.png" alt="">
+							<img src="images/image_conheca.png" alt="">
+						</div>
 				</div>
 			</div><!-- //CONTAINER -->
 		</section><!-- //TEAM -->
@@ -303,18 +290,21 @@
 		<section id="aprender" class="padbot20">
 			<!-- CONTAINER -->
 			<div class="purpose_block">
-				<div class="row4">
-					<h2><strong><b>O QUE VOCÊ</b></strong></h2>
-					<h2><strong><b>IRÁ APRENDER?</b></strong></h2>
-					<p>Durante a capacitação serão apresentados aspectos teóricos, cases e aplicações práticas para planejamento, gerenciamento e execução de eventos de empreendedorismo e inovação. Dessa forma, você será capaz de organizar eventos de alto valor agregado, impactando o ambiente universitário e local.</p>
-				</div>
+			<div class="bloco1">
+				<h2><strong>O QUE VOCÊ</strong></h2>
+				<h2><strong>IRÁ APRENDER?</strong></h2>
+				<p>Durante a capacitação serão apresentados aspectos teóricos, cases e aplicações práticas para <span style="color: #FB133A;">planejamento, gerenciamento e execução</span> de eventos de empreendedorismo e inovação. Dessa forma, você será capaz de organizar eventos de alto valor agregado, impactando o ambiente universitário e local.</p>
+			</div>
+			<div class="bloco2">
+				<img src="images/trilhas.png" alt="">
+				<h3><span style="color: #FB133A; font-weight: 500;">CONHEÇA AS TRILHAS:</span></h3>
 				<div class="container1">
 					<div class="popup2">
-						<a id="colorpopup1" class="btn btn-active" href="#popup1"><h5>CONTEXTUALIZAÇÃO</h5></a>
+						<a id="colorpopup1" class="btn btn-active" style="background:#62186A;" href="#popup1"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px;line-height: 120%;">CONTEXTUALIZAÇÃO</span></a>
 						<div id="popup1" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2>TRILHA 1 - CONTEXTUALIZAÇÃO</h2>
+								<h2><span style="color: #62186A; font-weight: 500;">TRILHA 1 - CONTEXTUALIZAÇÃO</span></h2>
 								<div class="content">
 									<p>Apresentação dos principais conceitos e conteúdos relacionados às temáticas de inovação e empreendedorismo. Nesta trilha, cada participante terá contato com tópicos como:</p>
 
@@ -326,11 +316,11 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup2" class="btn btn-active" href="#popup3"><h5>EVENTOS DE INOVAÇÃO</h5></a>
+						<a id="colorpopup1" class="btn btn-active" style="background:#00BAA7;" href="#popup3"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px;line-height: 120%;">EVENTOS <br>DE INOVAÇÃO</span></a>
 						<div id="popup3" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2>TRILHA 2 – EVENTOS DE INOVAÇÃO</h2>
+								<h2><span style="color: #00BAA7; font-weight: 500;">TRILHA 2 – EVENTOS DE INOVAÇÃO</span></h2>
 								<div class="content">
 									<p>Nesta etapa, os participantes da capacitação irão assimilar objetivos dos eventos de inovação, suas aplicações e resultados, assim como colocar em prática nos cenários acadêmicos e na sociedade.</p>
 
@@ -338,11 +328,11 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup3" class="btn btn-active" href="#popup4"><h5>PLANEJAMENTO DE EVENTOS</h5></a>
+						<a id="colorpopup1" class="btn btn-active" style="background:#FB133A;" href="#popup4"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px; line-height: 120%;">PLANEJAMENTO <br>DE EVENTOS</span></a>
 						<div id="popup4" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2>TRILHA 3 – PLANEJAMENTO DE EVENTOS</h2>
+								<h2><span style="color: #FB133A; font-weight: 500;">TRILHA 3 – PLANEJAMENTO DE EVENTOS</span></h2>
 								<div class="content">
 									<p>Na fase de planejamento é importante compreender os direcionamentos estratégicos para a execução de um evento de inovação e empreendedorismo, qual será seu impacto e quais são os resultados almejados.</p>
 
@@ -350,11 +340,11 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup4" class="btn btn-active" href="#popup5"><h5>EVENTO NA PRÁTICA</h5></a>
+						<a id="colorpopup1" class="btn btn-active" style="background:#ff8701;" href="#popup5"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px;line-height: 120%;">EVENTO <br>NA PRÁTICA</span></a>
 						<div id="popup5" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2>TRILHA 4 – EVENTO NA PRÁTICA</h2>
+								<h2><span style="color: #ff8701; font-weight: 500;">TRILHA 4 – EVENTO NA PRÁTICA</span></h2>
 								<div class="content">
 									<p>Momento de colocar em prática tudo o que foi aprendido ao longo do Programa Campus Tech e nada melhor do que colocar a mão na massa para garantir o aprendizado. Nesta etapa, os participantes irão atuar na realização de um evento real de inovação na cidade de Governador Valadares/MG.</p>
 
@@ -363,6 +353,7 @@
 							</div>
 						</div>
 				</div>
+			</div>
 			</div><!-- //CONTAINER -->
 		</section><!-- //TEAM -->
 		
@@ -385,13 +376,14 @@
 		<section id="duvidas">
 			<div class="purpose_block">
 				<!-- CONTAINER -->
-				<div class="container2">
+				<div class="bloco1">
 					<h2><b>PERGUNTAS</b></h2>
-					<h2><b>FREQUENTES</b></h2>
+					<h2><b><span style="color: #ff8701;">FREQUENTES</span></b></h2>
 					<p>Essas são as principais dúvidas sobre a capacitação.</p>
 					<a class="btn btn-active" href="inscricao.html" ><span data-hover="CLIQUE AQUI">INSCREVA-SE</span></a>
 				</div>
-					
+				
+				<div class="bloco2">
 				<button class="accordion">Quem poderá se inscrever para o programa?</button>
 				<div class="panel">
 				<p>Estudantes regularmente matriculados em universidades ou faculdades de Governador Valadares - MG, mediante declaração fornecida pela instituição.</p>
@@ -459,6 +451,7 @@
 				<div class="panel">
 				<p>Após a finalização das atividades do programa, alcançando frequência mínima e cumprindo com os requisitos especificados no edital, o participante receberá uma declaração digital que possibilitará comprovar sua participação no programa. Essa declaração poderá ser impressa e agregará valor ao seu currículo.</p>
 				</div>
+				</div>
 			</div>
 		</section><!-- //TEAM -->
 
@@ -499,7 +492,5 @@
 	
 
 </div>
-
-<script src="js/countdownPage.js"></script>
 </body>
 </html>
