Alterando alguns erros e deixando responsivo 1000

--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 						<div class="imagem1">
 							<div class="service-item">
 							<img src="images/Imagem1.png" alt="">
-							<ul>
+							<ul class="texto_inicial">
 								<li class="closed">Capacitação com bolsa de estudo</li>
 								<li class="closed">Aulas on-line e presenciais</li>
 								<li class="closed">Realização de evento ao final</li>
 							</ul>
 							<div class="container1">
-								<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
+								<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
 							</div>
 							</div>
 						</div>
@@ -174,16 +174,22 @@
 							<h2><b>GARANTIR SUA INSCRIÇÃO</b></h2>
 							<div class="imagens">
 								<div class="service-item">
-								<div class="atraves_da_img">
-								<p>Comprovante de participação</p>
-								<p>Ajuda de custo durante 4 meses</p>
-								<p>Acesso a metodologias e ferramentas exclusivas</p>
-								<p>Prática de um Evento de Inovação</p>
-								</div>
+								<ul class="motivos_ul">
+									<li><img src="images/motivos_1.png" alt=""></li>
+									<li><img src="images/motivos_2.png" alt=""></li>
+									<li><img src="images/motivos_3.png" alt=""></li>
+									<li><img src="images/motivos_4.png" alt=""></li>
+								</ul>
+								<ul class="motivos_ul_texto">
+									<li><p>Comprovante de participação</p></li>
+									<li><p>Ajuda de custo durante 4 meses</p></li>
+									<li><p>Acesso a metodologias e ferramentas exclusivas</p></li>
+									<li><p>Prática de um Evento de Inovação</p></li>
+								</ul>
 								<img src="images/motivos.png" alt="">
 								</div>
 							</div>
-							<a class="btn btn-active" href="inscricao.html" ><span>Inscreva-se</span></a>
+							<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span>Inscreva-se</span></a>
 					</div><!-- //ROW -->
 				</div><!-- //CONTAINER -->
 			</div><!-- //MULTI PURPOSE -->
@@ -205,14 +211,14 @@
 							<p class="centralizar_p"><span style="color: #FB133A;">IDEATHONS,</span> <span style="color: #00BAA7;">BOOTCAMPS</span> e <span style="color: #FF8701;">HACKATHONS</span></p>
 							<p>direcionados especialmente para o ambiente universitário e voltados para o desenvolvimento de ideias de negócio que utilizem conhecimento de base tecnológica.</p>
 						    </div>
-							<img src="images/o_que_vamos_aprender.png" alt="">
+							<img class="img_oque_vamos_aprender" src="images/o_que_vamos_aprender.png" alt="">
 					</div><!-- //ROW -->
 				</div><!-- //CONTAINER -->
 				<div class="col-lg-6y col-md-12 col-xs-12 p-0">
 					<div class="service-item">
 						<img src="images/o_que_vamos_aprender2.png" alt="">
 						<div class="container1">
-							<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
+							<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
 						</div>
 					</div>
 				</div>
@@ -236,10 +242,10 @@
 						<img src="images/i4.png" alt="">
 					</ul>
 					<ul class="ul_metodologia">
-						<a class="btn btn-active" href="#tab1" data-toggle="tab" style="background:#62186A;"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Planejamento</span></a>
-						<a class="btn btn-active" href="#tab2" data-toggle="tab" style="background:#FF8701"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Ferramentas</span></a>
-						<a class="btn btn-active" href="#tab3" data-toggle="tab" style="background:#FB133A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Gestão</span></a>
-						<a class="btn btn-active" href="#tab4" data-toggle="tab" style="background:#62186A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:30px;width:220px">Execução</span></a>
+						<a class="btn btn-active" href="#tab1" data-toggle="tab" style="background:#62186A;"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Planejamento</span></a>
+						<a class="btn btn-active" href="#tab2" data-toggle="tab" style="background:#FF8701"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Ferramentas</span></a>
+						<a class="btn btn-active" href="#tab3" data-toggle="tab" style="background:#FB133A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Gestão</span></a>
+						<a class="btn btn-active" href="#tab4" data-toggle="tab" style="background:#62186A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Execução</span></a>
 					</ul>
 					<!-- CASTOM TAB -->
 					<div id="myTabContent" class="tab-content">
@@ -269,16 +275,20 @@
 						<h2><strong><b>CONHEÇA</b></strong></h2>
 						<h2><strong><b><span style="color: #ff8701;">O EDITAL!</span></b></strong></h2>
 						<p>Acesse o Edital do Programa Campus Tech e saiba mais sobre a capacitação em eventos de inovação.</p>
-						<a class="btn btn-active" href="https://drive.google.com/u/0/uc?id=1AXU0Yx1KaOLz4Igl1zKurwjVSY4886dI&export=download" ><span data-hover="Baixar">CONHEÇA O EDITAL</span></a>
+						<a class="btn btn-active com_borda_verde" href="https://drive.google.com/u/0/uc?id=1AXU0Yx1KaOLz4Igl1zKurwjVSY4886dI&export=download" ><span data-hover="Baixar">CONHEÇA O<br> EDITAL</span></a>
 						</div>
 						<div class="bloco2">
 							<h3><span style="color: #FB133A;"><b>QUEM PODE SE INSCREVER?</b></span></h3>
-							<div class="atraves_da_imgz">
-								<p>Estudantes de graduação e pós-graduação</p>
-								<p>Residentes da região de Governador Valadares-MG</p>
-								<p>Que tenham interesse em eventos de inovação</p>
-							</div>
-							<img class = "imgz" src="images/icons_conheca.png" alt="">
+							<ul class="edital_ul">
+								<img src="images/edital_1.png" alt="">
+								<img src="images/edital_2.png" alt="">
+								<img src="images/edital_3.png" alt="">
+							</ul>
+							<ul class="edital_ul_texto">
+								<li><p>Estudantes de graduação e pós-graduação</p></li>
+								<li><p>Residentes da região de Governador Valadares-MG</p></li>
+								<li><p>Que tenham interesse em eventos de inovação</p></li>
+							</ul>
 							<img src="images/image_conheca.png" alt="">
 						</div>
 				</div>
@@ -367,7 +377,7 @@
 						<h2><b>EXPERT EM EVENTOS DE INOVAÇÃO?</b></h2>
 					</div>
 					</div>
-					<a class="btn btn-active" href="inscricao.html" ><span data-hover="CLIQUE AQUI">INSCREVA-SE</span></a>
+					<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span data-hover="CLIQUE AQUI">INSCREVA-SE</span></a>
 				</div>
 			</div><!-- //CONTAINER -->
 		</section><!-- //NEWS -->
@@ -379,8 +389,7 @@
 				<div class="bloco1">
 					<h2><b>PERGUNTAS</b></h2>
 					<h2><b><span style="color: #ff8701;">FREQUENTES</span></b></h2>
-					<p>Essas são as principais dúvidas sobre a capacitação.</p>
-					<a class="btn btn-active" href="inscricao.html" ><span data-hover="CLIQUE AQUI">INSCREVA-SE</span></a>
+					<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span data-hover="CLIQUE AQUI">INSCREVA-SE</span></a>
 				</div>
 				
 				<div class="bloco2">
