Finalizando responsividade e iniciando formulário

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 						<img src="images/i3.png" alt="">
 						<img src="images/i4.png" alt="">
 					</ul>
-					<ul class="ul_metodologia">
+					<ul class="ul_metodologia ul_metodologia_w">
 						<a class="btn btn-active" href="#tab1" data-toggle="tab" style="background:#62186A;"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Planejamento</span></a>
 						<a class="btn btn-active" href="#tab2" data-toggle="tab" style="background:#FF8701"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Ferramentas</span></a>
 						<a class="btn btn-active" href="#tab3" data-toggle="tab" style="background:#FB133A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Gestão</span></a>
@@ -310,7 +310,7 @@
 				<h3><span style="color: #FB133A; font-weight: 500;">CONHEÇA AS TRILHAS:</span></h3>
 				<div class="container1">
 					<div class="popup2">
-						<a id="colorpopup1" class="btn btn-active" style="background:#62186A;" href="#popup1"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px;line-height: 120%;">CONTEXTUALIZAÇÃO</span></a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#62186A;" href="#popup1">CONTEXTUALIZAÇÃO</a>
 						<div id="popup1" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
@@ -326,7 +326,7 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup1" class="btn btn-active" style="background:#00BAA7;" href="#popup3"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px;line-height: 120%;">EVENTOS <br>DE INOVAÇÃO</span></a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#00BAA7;" href="#popup3">EVENTOS <br>DE INOVAÇÃO</a>
 						<div id="popup3" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
@@ -338,7 +338,7 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup1" class="btn btn-active" style="background:#FB133A;" href="#popup4"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px; line-height: 120%;">PLANEJAMENTO <br>DE EVENTOS</span></a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#FB133A;" href="#popup4">PLANEJAMENTO <br>DE EVENTOS</a>
 						<div id="popup4" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
@@ -350,7 +350,7 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup1" class="btn btn-active" style="background:#ff8701;" href="#popup5"><span data-hover="Clique aqui" style="line-height: 10px; color:white; font-size:18px;line-height: 120%;">EVENTO <br>NA PRÁTICA</span></a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#ff8701;" href="#popup5">EVENTO <br>NA PRÁTICA</a>
 						<div id="popup5" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
